# mfmc

Matlab/: ALL_IN_ONE_CONVERTER.m  fn_ds_convert.m
Python/: pyproject.toml  requirements.txt
Python/mfmc/: exceptions.py  file.py  group.py  law.py  probe.py  sequence.py
