[tool.poetry]
name = "mfmc"
version = "0.1.0"
description = "A Python package for the MFMC ultrasound data format"
authors = ["Bruce Cowan <bruce.cowan@strath.ac.uk>"]

[tool.poetry.dependencies]
python = "^3.6"
h5py = "^2.10.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pytest = "^6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
